--- a/app/src/main/res/layout/botanicki_mod.xml
+++ b/app/src/main/res/layout/botanicki_mod.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/slikaItem"
-            android:layout_width="148dp"
-            android:layout_height="match_parent"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
