--- a/app/src/main/res/layout/nova_biljka_activity.xml
+++ b/app/src/main/res/layout/nova_biljka_activity.xml
@@ -9,12 +9,14 @@
         android:id="@+id/nazivET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="39dp"
-        android:layout_marginEnd="111dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
         android:inputType="text"
         android:text="Naziv"
+        app:layout_constraintBottom_toTopOf="@+id/porodicaET"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,16 +25,13 @@
         android:id="@+id/porodicaET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginEnd="109dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="104dp"
         android:ems="10"
         android:inputType="text"
         android:text="Porodica"
-        app:layout_constraintBottom_toTopOf="@+id/medicinskoUpozorenjeET"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nazivET" />
 
@@ -40,13 +39,13 @@
         android:id="@+id/medicinskoUpozorenjeET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="112dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="104dp"
         android:ems="10"
         android:inputType="text"
         android:text="Medicinsko upozorenje"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/porodicaET" />
 
@@ -54,85 +53,115 @@
         android:id="@+id/jeloET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="89dp"
-        android:layout_marginEnd="113dp"
-        android:layout_marginBottom="338dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="24dp"
         android:ems="10"
         android:inputType="text"
         android:text="Jelo"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/LinearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicinskoUpozorenjeET" />
 
-    <ListView
-        android:id="@+id/medicinskaKoristLV"
-        android:layout_width="409dp"
-        android:layout_height="335dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="395dp"
-        android:choiceMode="multipleChoice"/>
-
-    <ListView
-        android:id="@+id/klimatskiTipLV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-1dp"
-        android:choiceMode="multipleChoice">
-
-    </ListView>
-
-    <ListView
-        android:id="@+id/zemljisniTipLV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="multipleChoice"/>
-
-    <ListView
-        android:id="@+id/profilOkusaLV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="singleChoice" />
-
-    <ListView
-        android:id="@+id/jelaLV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/dodajJeloBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dodaj jelo"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="747dp" />
-
-    <Button
-        android:id="@+id/dodajBiljkuBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Dodaj biljku"
-        app:layout_constraintTop_toBottomOf="@+id/jelaLV"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <LinearLayout
+        android:id="@+id/LinearLayout"
+        android:layout_width="399dp"
+        android:layout_height="420dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:onClick="dodajBiljku" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jeloET">
 
-    <ImageView
-        android:id="@+id/slikaIV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="283dp"
-        tools:layout_editor_absoluteY="46dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="24dp">
 
-    <Button
-        android:id="@+id/uslikajBiljkuBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="uslikajBiljkuBtn" />
+            <ListView
+                android:id="@+id/medicinskaKoristLV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="8dp"
+                android:choiceMode="multipleChoice">
+
+            </ListView>
+
+            <ListView
+                android:id="@+id/klimatskiTipLV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:choiceMode="multipleChoice">
+
+            </ListView>
+
+            <ListView
+                android:id="@+id/zemljisniTipLV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:choiceMode="multipleChoice" />
+
+            <ListView
+                android:id="@+id/profilOkusaLV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:choiceMode="singleChoice">
+
+            </ListView>
+
+            <ImageView
+                android:id="@+id/slikaIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="9dp"
+                android:layout_marginBottom="150dp"
+                app:srcCompat="@drawable/ic_launcher_background" />
+
+            <ListView
+                android:id="@+id/jelaLV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:choiceMode="singleChoice"
+                android:visibility="gone">
+
+            </ListView>
+
+            <Button
+                android:id="@+id/uslikajBiljkuBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="uslikajBiljkuBtn" />
+
+            <Button
+                android:id="@+id/dodajBiljkuBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:onClick="dodajBiljku"
+                android:text="Dodaj biljku" />
+
+            <Button
+                android:id="@+id/dodajJeloBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="15dp"
+                android:text="Dodaj jelo" />
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
